--- a/templates/base.html
+++ b/templates/base.html
@@ -7,21 +7,43 @@
     <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
 </head>
 
-<body class="bg-white">
+<body class="bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">To The Moon</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <a class="nav-link" href="/">Bitcoin</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/eth/dashboard">Ethereum</a>
+      </li>
+  </div>
+</nav>
     <div class="container-fluid">
+      <br>
+      <br>
+      <div class="control-group">
+      <div style="width:60%" class="mx-auto">
       {% block cards%}
       {% endblock %}
+    </div>
+      <br>
+      <br>
+    </div>
 
       {% block graph %}
       {% endblock %}
-
-      {% block wordcloud %}
-      {% endblock %}
-
+      <div class="row">
+        <div class="mx-auto">
+          {% block wordcloud %}
+          {% endblock %}
+        </div>
+      </div>
       {% block news %}
       {% endblock %}
-
-
-    </div>
+      </div>
 </body>
 </html>
