--- a/templates/ethereum/dashboard.html
+++ b/templates/ethereum/dashboard.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 {% block cards %}
 <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
-<iframe src="{{ url_for('btc_cards') }}"  onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+<iframe src="{{ url_for('eth_cards') }}"  onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
 {% endblock %}
 
 {% block graph %}
@@ -15,14 +15,14 @@
     <div class="row">
         <div class="col">
             <div id="synced-charts">
-                <div id="btc_price"></div>
+                <div id="eth_price"></div>
                 <div id="tweet_sentiment"></div>
                 <script src="https://cdn.jsdelivr.net/npm/apexcharts@latest"> </script>
                 <script>
                     let start_date = new Date('2020-03-21');
                   var optionsLine = {
                         series: [{
-                            name: 'BTC Price (USD)',
+                            name: 'ETH Price (USD)',
                             data: [
                                 {% for daily_price in prices %}
                                     {
@@ -53,7 +53,7 @@
                             min: start_date.getTime(),
                         }
                     };
-                    var chart = new ApexCharts(document.querySelector("#btc_price"), optionsLine)
+                    var chart = new ApexCharts(document.querySelector("#eth_price"), optionsLine)
                     chart.render()
 
                     var optionsArea = {
@@ -123,8 +123,8 @@
                         let news_iframe = $('#articles');
                         let tweets_iframe = $('#tweets');
 
-                        let news_url = "{{ url_for('btc_news') }}?since=" + start.toISOString().split('T')[0];
-                        let tweets_url = "{{ url_for('btc_dashboard_tweets') }}?since=" + start.toISOString().split('T')[0];
+                        let news_url = "{{ url_for('eth_news') }}?since=" + start.toISOString().split('T')[0];
+                        let tweets_url = "{{ url_for('eth_dashboard_tweets') }}?since=" + start.toISOString().split('T')[0];
 
                         news_iframe.attr('src', news_url);
                         tweets_iframe.attr('src', tweets_url);
@@ -169,8 +169,8 @@
                         let news_iframe = $('#articles');
                         let tweets_iframe = $('#tweets');
 
-                        let news_url = "{{ url_for('btc_news') }}";
-                        let tweets_url = "{{ url_for('btc_dashboard_tweets') }}";
+                        let news_url = "{{ url_for('eth_news') }}";
+                        let tweets_url = "{{ url_for('eth_dashboard_tweets') }}";
 
                         news_iframe.attr('src', news_url);
                         tweets_iframe.attr('src', tweets_url);
@@ -183,10 +183,10 @@
     {% block news %}
     <div class="row">
             <div class="col">
-                <iframe src="{{ url_for('btc_dashboard_tweets') }}" id="tweets" name="tweets" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:800px;width:100%;border:none;overflow:hidden;"></iframe>
+                <iframe src="{{ url_for('eth_dashboard_tweets') }}" id="tweets" name="tweets" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:800px;width:100%;border:none;overflow:hidden;"></iframe>
             </div>
             <div class="col">
-                <iframe src="{{ url_for('btc_news') }}" id="articles" name="articles" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:auto;width:100%;border:none;overflow:hidden;"></iframe>
+                <iframe src="{{ url_for('eth_news') }}" id="articles" name="articles" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:auto;width:100%;border:none;overflow:hidden;"></iframe>
             </div>
         </div>
     {% endblock %}
